Implemented storage/retrieval client