@@ -8,14 +8,10 @@ import java.io.InputStreamReader;
 import java.math.BigInteger;
 import java.net.InetSocketAddress;
 import java.net.URL;
-import java.security.GeneralSecurityException;
 import java.security.InvalidKeyException;
 import java.security.KeyManagementException;
-import java.security.KeyPair;
-import java.security.KeyPairGenerator;
 import java.security.KeyStore;
 import java.security.KeyStoreException;
-import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.NoSuchProviderException;
 import java.security.PrivateKey;
@@ -28,14 +24,11 @@ import java.security.cert.Certificate;
 import java.security.cert.CertificateEncodingException;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
-import java.security.interfaces.RSAPrivateKey;
-import java.security.interfaces.RSAPublicKey;
 import java.security.spec.InvalidKeySpecException;
 import java.util.AbstractMap.SimpleEntry;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -53,20 +46,13 @@ import javax.net.ssl.KeyManagerFactory;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManagerFactory;
 
-import org.bouncycastle.asn1.ASN1Encoding;
-import org.bouncycastle.asn1.DERNull;
-import org.bouncycastle.asn1.nist.NISTObjectIdentifiers;
-import org.bouncycastle.asn1.x509.AlgorithmIdentifier;
-import org.bouncycastle.asn1.x509.DigestInfo;
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 
-import com.ibm.pross.common.util.Exponentiation;
-import com.ibm.pross.common.util.RandomNumberGenerator;
+import com.ibm.pross.common.CommonConfiguration;
 import com.ibm.pross.common.util.crypto.ecc.EcPoint;
-import com.ibm.pross.common.util.crypto.rsa.threshold.sign.client.RsaSharing;
 import com.ibm.pross.common.util.crypto.rsa.threshold.sign.data.SignatureResponse;
 import com.ibm.pross.common.util.crypto.rsa.threshold.sign.data.SignatureShareProof;
 import com.ibm.pross.common.util.crypto.rsa.threshold.sign.exceptions.BadArgumentException;
@@ -74,7 +60,9 @@ import com.ibm.pross.common.util.crypto.rsa.threshold.sign.exceptions.BelowThres
 import com.ibm.pross.common.util.crypto.rsa.threshold.sign.math.ThresholdSignatures;
 import com.ibm.pross.common.util.crypto.rsa.threshold.sign.server.ServerPublicConfiguration;
 import com.ibm.pross.common.util.serialization.Pem;
-import com.ibm.pross.server.app.CertificateAuthorityCli;
+import com.ibm.pross.common.util.shamir.Polynomials;
+import com.ibm.pross.common.util.shamir.Shamir;
+import com.ibm.pross.common.util.shamir.ShamirShare;
 import com.ibm.pross.server.app.http.HttpRequestProcessor;
 import com.ibm.pross.server.configuration.permissions.exceptions.ResourceUnavailableException;
 
@@ -82,35 +70,13 @@ import bftsmart.reconfiguration.util.sharedconfig.KeyLoader;
 import bftsmart.reconfiguration.util.sharedconfig.ServerConfiguration;
 import bftsmart.reconfiguration.util.sharedconfig.ServerConfigurationLoader;
 import net.i2p.crypto.eddsa.EdDSASecurityProvider;
-import sun.security.util.DerOutputStream;
-import sun.security.util.DerValue;
-import sun.security.x509.AlgorithmId;
-import sun.security.x509.BasicConstraintsExtension;
-import sun.security.x509.CertificateAlgorithmId;
-import sun.security.x509.CertificateExtensions;
-import sun.security.x509.CertificateSerialNumber;
-import sun.security.x509.CertificateValidity;
-import sun.security.x509.CertificateVersion;
-import sun.security.x509.CertificateX509Key;
-import sun.security.x509.DNSName;
-import sun.security.x509.GeneralName;
-import sun.security.x509.GeneralNames;
-import sun.security.x509.IPAddressName;
-import sun.security.x509.SubjectAlternativeNameExtension;
-import sun.security.x509.X500Name;
-import sun.security.x509.X509CertImpl;
-import sun.security.x509.X509CertInfo;
 
 /**
- * Performs generation and storage of a locally generated RSA private key and
- * can then be used to issue certificates using that distributed private key as
- * the CA's private key
+ * Performs storage of an arbitrary secret value, and then can read back shares
+ * of that secret to recover the secret
  */
 @SuppressWarnings("restriction")
-public class RsaCertificateAuthorityClient {
-
-	public static final String HASH_ALGORITHM = "SHA-512";
-	public static final String CERTIFICATE_SIGNING_ALGORITHM = "SHA512withRSA"; // Must match hash algorithm
+public class ReadWriteClient {
 
 	static {
 		Security.addProvider(new BouncyCastleProvider());
@@ -136,74 +102,50 @@ public class RsaCertificateAuthorityClient {
 	private final X509Certificate clientCertificate;
 	private final PrivateKey clientTlsKey;
 
-	// Parameters of operation
+	// Parameters of the operation
 	private final String secretName;
-	private final File caFile;
-
-	// Unique parameters for generating
-	private final String issuerDn;
-
-	// Unique parameters for issuing
-	private final File publicKeyFile;
-	private final File certificateOutputFile;
-	private final String subjectDn;
+	private final BigInteger secretToStore;
 
 	/**
-	 * Constructor for generating a new CA key
+	 * Constructor for storing a new secret
 	 */
-	public RsaCertificateAuthorityClient(final ServerConfiguration serverConfiguration,
-			final List<X509Certificate> caCertificates, final KeyLoader serverKeys,
-			final X509Certificate clientCertificate, final PrivateKey clientTlsKey, final String secretName,
-			final File caFile, final String issuerDn) {
+	public ReadWriteClient(final ServerConfiguration serverConfiguration, final List<X509Certificate> caCertificates,
+			final KeyLoader serverKeys, final X509Certificate clientCertificate, final PrivateKey clientTlsKey,
+			final String secretName, final BigInteger secretToStore) {
 		this.serverConfiguration = serverConfiguration;
 		this.caCertificates = caCertificates;
 		this.serverKeys = serverKeys;
 		this.clientCertificate = clientCertificate;
 		this.clientTlsKey = clientTlsKey;
 		this.secretName = secretName;
-		this.caFile = caFile;
-		this.issuerDn = issuerDn;
-
-		// Not used
-		this.publicKeyFile = null;
-		this.certificateOutputFile = null;
-		this.subjectDn = null;
+		this.secretToStore = secretToStore;
 	}
 
 	/**
 	 * Constructor for issuing a certificate
 	 */
-	public RsaCertificateAuthorityClient(final ServerConfiguration serverConfiguration,
-			final List<X509Certificate> caCertificates, final KeyLoader serverKeys,
-			final X509Certificate clientCertificate, final PrivateKey clientTlsKey, final String secretName,
-			final File caFile, final File publicKeyFile, final File certificateOutputFile, final String subjectDn) {
+	public ReadWriteClient(final ServerConfiguration serverConfiguration, final List<X509Certificate> caCertificates,
+			final KeyLoader serverKeys, final X509Certificate clientCertificate, final PrivateKey clientTlsKey,
+			final String secretName) {
 		this.serverConfiguration = serverConfiguration;
 		this.caCertificates = caCertificates;
 		this.serverKeys = serverKeys;
 		this.clientCertificate = clientCertificate;
 		this.clientTlsKey = clientTlsKey;
 		this.secretName = secretName;
-		this.caFile = caFile;
-		this.publicKeyFile = publicKeyFile;
-		this.certificateOutputFile = certificateOutputFile;
-		this.subjectDn = subjectDn;
 
 		// Not used
-		this.issuerDn = null;
+		this.secretToStore = null;
 	}
 
-	public void generateCaCertificate() throws BadPaddingException, IllegalBlockSizeException, ClassNotFoundException,
+	public void writeSecret() throws BadPaddingException, IllegalBlockSizeException, ClassNotFoundException,
 			IOException, ResourceUnavailableException, BelowThresholdException, InvalidKeySpecException,
-			NoSuchAlgorithmException, CertificateEncodingException {
+			NoSuchAlgorithmException, CertificateEncodingException, InterruptedException {
 
-		// Generates new key
-		// Thresholdizes it
-		// Stores it
-		// Creates a self-signed certificate file at the specified location
-		// (Invoke the CA class?)
-		// Complete. Storage of RSA to threshold servers. Note this key type does not
-		// support proactive refresh nor share recovery! Only use this key for
-		// authentication, not for decryption of long term data.
+		// Thresholdizes the given secret
+		// Stores each share to shareholder
+		// Initiates a dkg using that secret
+		// Outputs the public key of the secret to verify stored correctly
 
 		// Get n and t
 		final int numServers = serverConfiguration.getNumServers();
@@ -211,142 +153,139 @@ public class RsaCertificateAuthorityClient {
 
 		// Print status of key pair generation
 		System.out.println("-----------------------------------------------------------");
-		System.out.println("Beginning generation of threshold RSA key...");
-		final RsaSharing rsaSharing = RsaSharing.generateSharing(numServers, threshold);
-		System.out.println("RSA Key Generation complete.");
+		System.out.println("Generating shares of the provided secret...");
+		final EcPoint publicKeyOfSecret = CommonConfiguration.CURVE.multiply(CommonConfiguration.g, secretToStore);
+		System.out.println("Public key of secret = " + publicKeyOfSecret);
+		final BigInteger[] coefficients = Shamir.generateCoefficients(threshold);
+		coefficients[0] = secretToStore;
+		final ShamirShare[] shares = Shamir.generateShares(coefficients, numServers);
+		System.out.println("Generation of shares complete.");
 		System.out.println();
 
-		// Create and persist CA certificate
-		System.out.println("Creating self-signed root CA certificate for: " + issuerDn);
-		final X509Certificate caCert = CertificateAuthorityCli.generateCaCertificate(issuerDn, rsaSharing.getKeyPair());
-		Pem.storeCertificateToFile(caCert, caFile);
-		System.out.println("Certificate written to: " + caFile.getAbsolutePath());
-		System.out.println();
-
-		// Store shares and parameters to the shareholders (creating a new sharing state
-		// for the server, bump epoch?)
-		System.out.print("Storing shares of RSA private key to secret: " + this.secretName + "... ");
-		final Boolean success = this.storeRsaSharing(rsaSharing);
-		if (success) {
-			System.out.println("Storage complete");
-		} else {
-			System.out.println("Storage failed");
+		// Store shares and parameters to the shareholders
+		System.out.print("Storing shares to secret: " + this.secretName + "... ");
+		final Boolean storageSuccess = this.storeSecret(shares);
+		if (!storageSuccess) {
+			System.err.println("\nStorage failed");
+			System.exit(-1);
 		}
 		System.out.println(" (done)");
 
-		System.out.println("CA Creation Completed. Ready to issue certificates.");
-		System.out.println(
-				"WARNING: Refresh and reconstruction are not active for RSA keys, do not use them for encrypting anything that must be recovered");
+		// Initiating DKG
+		System.out.print("Initiating DKG for secret: " + this.secretName + "... ");
+		final Boolean dkgSuccess = this.performDkg();
+		if (!dkgSuccess) {
+			System.out.println("DKG failed, secret is not available");
+		}
+		System.out.println(" (done)");
+
+		// Initiating DKG
+		Thread.sleep(5000);
+		System.out.println(" (done)");
+		
+		// Verify DKG
+		// Get public keys from the server
+		System.out.print("Accessing public key for secret: " + this.secretName + "... ");
+		final SimpleEntry<List<EcPoint>, Long> publicKeyAndEpoch = this.getServerVerificationKeys(secretName);
+		System.out.println(" (done)");
+		final List<EcPoint> publicKeys = publicKeyAndEpoch.getKey();
+		System.out.println("Stored Public key for secret:    " + publicKeys.get(0));
+		boolean secretsMatch = publicKeyOfSecret.equals(publicKeys.get(0));
+		System.out.println();
+
+		if (secretsMatch) {
+			System.out.println("DKG complete. Secret is now stored and available for reading.");
+		} else {
+			System.err.println("DKG complete but stored result does not match what we attempted to store.");
+			System.exit(-1);
+		}
+
 	}
 
-	public void issuerCertificate() throws BadPaddingException, IllegalBlockSizeException, ClassNotFoundException,
-			IOException, ResourceUnavailableException, BelowThresholdException, NoSuchAlgorithmException,
-			CertificateException, InvalidKeySpecException, InvalidKeyException, NoSuchProviderException,
-			SignatureException, BadArgumentException {
+	public void readSecret() throws BadPaddingException, IllegalBlockSizeException, ClassNotFoundException, IOException,
+			ResourceUnavailableException, BelowThresholdException, NoSuchAlgorithmException, CertificateException,
+			InvalidKeySpecException, InvalidKeyException, NoSuchProviderException, SignatureException,
+			BadArgumentException {
 
-		// Test most common configuration
-
-		// Use openSSL to verify it
+		// Perform read to all servers
+		// Validate each result before adding it to the list
+		// On read, print the restored secret's public key
+		// Compare to the public key that was return getting the info of the secret
+		// TODO: Compare returned shares against (most common feldman commitments
+		// Print the secret to standard out
 
 		// Print status
 		System.out.println("-----------------------------------------------------------");
-		System.out.println("Issing certificate using threshold RSA secret: " + this.secretName);
-		System.out.print("  Reading end-entity public key from file: " + this.publicKeyFile + "... ");
-		final PublicKey entityPublicKey = (PublicKey) Pem.loadKeyFromFile(this.publicKeyFile);
-		System.out.println("done.");
 
-		System.out.print("  Loading CA certificate from file: " + this.publicKeyFile + "... ");
-		final X509Certificate caCertificate = Pem.loadCertificateFromFile(caFile);
-		System.out.println("done.");
-
-		System.out.print("  Creating a To-Be-Signed Certificate for: " + this.subjectDn + "... ");
-		final X509CertInfo certificateInfo = createCertificateInfo(subjectDn, null, null, entityPublicKey, 365, false,
-				caCertificate.getSubjectDN().getName());
-		final X509CertImpl certificate = new X509CertImpl(certificateInfo);
-		final byte[] toBeSigned = certificate.getTBSCertificate();
-		final BigInteger toBeSignedRaw = EMSA_PKCS1_V1_5_ENCODE(toBeSigned,
-				((RSAPublicKey) caCertificate.getPublicKey()).getModulus());
-		System.out.println("done.");
-
-		// Get public key and current epoch from the server
-		System.out.print("  Performing threshold signing of certificate using: " + this.secretName + "... ");
-		final BigInteger signatureResult = this.signMessage(toBeSignedRaw);
-		System.out.println("done.");
-		System.out.println("Signature result obtained: " + signatureResult);
+		// Get public keys from the server
+		System.out.print("Accessing public key for secret: " + this.secretName + "... ");
+		final SimpleEntry<List<EcPoint>, Long> publicKeyAndEpoch = this.getServerVerificationKeys(secretName);
+		System.out.println(" (done)");
+		final List<EcPoint> publicKeys = publicKeyAndEpoch.getKey();
+		System.out.println("Stored Public key for secret:    " + publicKeys.get(0));
 		System.out.println();
 
-		System.out.print("  Creating certificate using signature... ");
-		final byte[] signature = signatureResult.toByteArray();
-		final X509Certificate cert = createCertificateFromTbsAndSignature(certificateInfo, signature);
-		// cert.verify(caCertificate.getPublicKey());
-		System.out.println("  done. Certificate is valid!");
-
-		// Write plaintext to output file
-		System.out.print("Writing signed certificate to file: " + this.certificateOutputFile + "... ");
-		Pem.storeCertificateToFile(cert, this.certificateOutputFile);
-		System.out.println(" done.");
+		// Attempt recovery of the stored secret
+		System.out.println("Reading shares to decode secret: " + this.secretName);
+		final BigInteger recoveredSecret = this.readShares(publicKeys);
+		final EcPoint publicKeyOfSecret = CommonConfiguration.CURVE.multiply(CommonConfiguration.g, recoveredSecret);
+		System.out.println("Public key of recvered secret = " + publicKeyOfSecret);
+		boolean secretsMatch = publicKeyOfSecret.equals(publicKeys.get(0));
+		System.out.println("done.");
 		System.out.println();
 
-		System.out.println("Operation complete. Certificate now ready for use.");
+		if (secretsMatch) {
+			System.out.println("Value of secret: " + recoveredSecret);
+		} else {
+			System.err.println("Failed to recover secret");
+			System.exit(-1);
+		}
 	}
 
 	public static void main(final String args[]) throws IOException, NoSuchAlgorithmException, InvalidKeySpecException,
 			CertificateException, BadPaddingException, IllegalBlockSizeException, ClassNotFoundException,
 			ResourceUnavailableException, BelowThresholdException, InvalidKeyException, NoSuchProviderException,
-			SignatureException, BadArgumentException {
+			SignatureException, BadArgumentException, InterruptedException {
 
 		// Parse arguments
-		if (args.length < 6) {
-			System.err.println(
-					"USAGE: config-dir username secretname [GENERATE] ca-certificate-output-file \"Issuer DN\"");
-			System.err.println(
-					"USAGE: config-dir username secretname [ISSUE] ca-certificate-input-file public-key-input-file issued-certificate-output-file \"Subject DN\"");
+		if (args.length < 4) {
+			System.err.println("USAGE: config-dir username secretname [WRITE] secret-value");
+			System.err.println("USAGE: config-dir username secretname [READ]");
 			System.exit(-1);
 		}
 		final File baseDirectory = new File(args[0]);
 		final String username = args[1];
 		final String secretName = args[2];
-		final boolean generate = "GENERATE".equalsIgnoreCase(args[3]);
-		final File caFile = new File(args[4]);
+		final boolean write = "WRITE".equalsIgnoreCase(args[3]);
+		final BigInteger secretToStore;
 
-		String issuerDn = null;
-		File publicKeyFile = null;
-		File certificateOutputFile = null;
-		String subjectDn = null;
-		if (!generate) {
-			if (!caFile.exists()) {
-				System.err.println("CA file does not exist: " + caFile.getAbsolutePath());
-				System.exit(-1);
-			}
+		if (write) {
 
 			// Issue certificate
-			if (args.length < 8) {
-				System.err.println(
-						"USAGE: config-dir username secretname [ISSUE] ca-certificate-input-file public-key-input-file issued-certificate-output-file \"Subject DN\"");
+			if (args.length < 5) {
+				System.err.println("USAGE: config-dir username secretname [WRITE] secret-value");
 				System.exit(-1);
 			}
-			publicKeyFile = new File(args[5]);
+			secretToStore = new BigInteger(args[4]);
 
-			if (!publicKeyFile.exists()) {
-				System.err.println("PublicKey file does not exist: " + publicKeyFile.getAbsolutePath());
+			// Check range
+			if (secretToStore.compareTo(BigInteger.ONE) < 0) {
+				System.err.println("Secret to store must be greater than zero");
 				System.exit(-1);
 			}
 
-			certificateOutputFile = new File(args[6]);
-			subjectDn = args[7];
+			if (secretToStore.compareTo(CommonConfiguration.CURVE.getR()) >= 0) {
+				System.err.println("Secret to store must be less than " + CommonConfiguration.CURVE.getR());
+				System.exit(-1);
+			}
 		} else {
-			// Generate certificate and store key
-			issuerDn = args[5];
+			secretToStore = null;
 		}
 
 		// Load server configuration (learn n and k)
 		final File configFile = new File(baseDirectory, CONFIG_FILENAME);
 		final ServerConfiguration configuration = ServerConfigurationLoader.load(configFile);
 		System.out.println(configuration);
-
-		// TODO: Get these directly from the shareholder responses
-		// final int n = configuration.getNumServers();
-		// final int k = configuration.getReconstructionThreshold();
 
 		// Load server keys
 		final File keysDirectory = new File(baseDirectory, SERVER_KEYS_DIRECTORY);
@@ -374,33 +313,32 @@ public class RsaCertificateAuthorityClient {
 		caCerts.add(Pem.loadCertificateFromFile(caCertificateFile));
 
 		// Perform operation
-		if (generate) {
-			// Create new generation client
-			final RsaCertificateAuthorityClient signingClient = new RsaCertificateAuthorityClient(configuration,
-					caCerts, serverKeys, clientCertificate, clientPrivateKey, secretName, caFile, issuerDn);
-			signingClient.generateCaCertificate();
+		if (write) {
+			// Create writing client
+			final ReadWriteClient storageClient = new ReadWriteClient(configuration, caCerts, serverKeys,
+					clientCertificate, clientPrivateKey, secretName, secretToStore);
+			storageClient.writeSecret();
 		} else {
-			// Create new issuing client
-			final RsaCertificateAuthorityClient signingClient = new RsaCertificateAuthorityClient(configuration,
-					caCerts, serverKeys, clientCertificate, clientPrivateKey, secretName, caFile, publicKeyFile,
-					certificateOutputFile, subjectDn);
-			signingClient.issuerCertificate();
+			// Create reading client
+			final ReadWriteClient signingClient = new ReadWriteClient(configuration, caCerts, serverKeys,
+					clientCertificate, clientPrivateKey, secretName);
+			signingClient.readSecret();
 		}
 	}
 
-	private static SignatureResponse createSignatureResult(Object obj) {
-		return (SignatureResponse) obj;
+	private static ShamirShare createShamirShare(Object obj) {
+		return (ShamirShare) obj;
 	}
 
 	/**
-	 * Interacts with the servers to store an RSA sharing to a given secret
+	 * Interacts with the servers to store an shares of a user provided secret
 	 * 
-	 * @param rsaSharing
+	 * @param shares
 	 * @return
 	 * @throws ResourceUnavailableException
 	 * @throws BelowThresholdException
 	 */
-	private Boolean storeRsaSharing(final RsaSharing rsaSharing)
+	private Boolean storeSecret(final ShamirShare[] shares)
 			throws ResourceUnavailableException, BelowThresholdException {
 
 		// Server configuration
@@ -415,28 +353,10 @@ public class RsaCertificateAuthorityClient {
 		final AtomicInteger failureCounter = new AtomicInteger(0);
 		final int maximumFailures = (numShareholders - reconstructionThreshold);
 
-		// Each task deposits its result into this map after verifying it is correct and
-		// consistent
-		// TODO: Add verification via proofs
+		// Each task deposits its result into this map after verifying it is good
 		final List<Object> successfulResults = Collections.synchronizedList(new ArrayList<>());
 
-		// Collect pulic data to register with servers
-
-		// Send the public exponenet to the server
-		final BigInteger exponent = rsaSharing.getPublicKey().getPublicExponent();
-
-		// Send the modulus to the server
-		final BigInteger modulus = rsaSharing.getPublicKey().getModulus();
-
-		// Send the generator to the server
-		final BigInteger v = rsaSharing.getV();
-
-		StringBuilder allVerificationKeys = new StringBuilder();
-		for (int i = 1; i <= this.serverConfiguration.getNumServers(); i++) {
-			allVerificationKeys.append("&v_" + i + "=" + rsaSharing.getVerificationKeys()[i - 1]);
-		}
-
-		// Create a partial result task for everyone except ourselves
+		// Create a partial result task for everyone
 		int serverId = 0;
 		for (final InetSocketAddress serverAddress : this.serverConfiguration.getServerAddresses()) {
 			serverId++;
@@ -444,24 +364,21 @@ public class RsaCertificateAuthorityClient {
 			final int serverPort = HttpRequestProcessor.BASE_HTTP_PORT + serverId;
 
 			// Send share to the server
-			final BigInteger share = rsaSharing.getShares()[serverId - 1].getY();
+			final BigInteger share = shares[serverId - 1].getY();
 
 			final String linkUrl = "https://" + serverIp + ":" + serverPort + "/store?secretName=" + this.secretName
-					+ "&e=" + exponent + "&n=" + modulus + "&v=" + v + allVerificationKeys.toString() + "&share="
-					+ share;
+					+ "&share=" + share;
 
 			// Create new task to get the partial exponentiation result from the server
 			executor.submit(new PartialResultTask(serverId, linkUrl, successfulResults, latch, failureCounter,
 					maximumFailures) {
 				@Override
 				void parseJsonResult(final String json) throws Exception {
-
 					// Store result for later processing
 					successfulResults.add(Boolean.TRUE);
 
 					// Everything checked out, increment successes
 					latch.countDown();
-
 				}
 			});
 		}
@@ -489,7 +406,76 @@ public class RsaCertificateAuthorityClient {
 	}
 
 	/**
-	 * Interacts with the servers to sign a message using the given secret
+	 * Tells each of the servers to perform a DKG, we count this as a success if any
+	 * server succeeds
+	 * 
+	 * @return
+	 * @throws ResourceUnavailableException
+	 * @throws BelowThresholdException
+	 */
+	private Boolean performDkg() throws ResourceUnavailableException, BelowThresholdException {
+
+		// Server configuration
+		final int numShareholders = this.serverConfiguration.getNumServers();
+
+		// We create a thread pool with a thread for each task and remote server
+		final ExecutorService executor = Executors.newFixedThreadPool(numShareholders - 1);
+
+		// The countdown latch tracks progress towards reaching a threshold (in this
+		// case 1)
+		final CountDownLatch latch = new CountDownLatch(1);
+		final AtomicInteger failureCounter = new AtomicInteger(0);
+		final int maximumFailures = (numShareholders - 1);
+
+		// Each task deposits its result into this map after verifying it is good
+		final List<Object> successfulResults = Collections.synchronizedList(new ArrayList<>());
+
+		// Create a partial result task for everyone
+		int serverId = 0;
+		for (final InetSocketAddress serverAddress : this.serverConfiguration.getServerAddresses()) {
+			serverId++;
+			final String serverIp = serverAddress.getAddress().getHostAddress();
+			final int serverPort = HttpRequestProcessor.BASE_HTTP_PORT + serverId;
+
+			final String linkUrl = "https://" + serverIp + ":" + serverPort + "/generate?secretName=" + this.secretName;
+
+			// Create new task to get the partial exponentiation result from the server
+			executor.submit(new PartialResultTask(serverId, linkUrl, successfulResults, latch, failureCounter,
+					maximumFailures) {
+				@Override
+				void parseJsonResult(final String json) throws Exception {
+					// Store result for later processing
+					successfulResults.add(Boolean.TRUE);
+
+					// Everything checked out, increment successes
+					latch.countDown();
+				}
+			});
+		}
+
+		try {
+			// Once we have 1 successful response we can interpolate our share
+			latch.await();
+
+			// Check that we have enough results to interpolate the share
+			if (failureCounter.get() <= maximumFailures) {
+
+				executor.shutdown();
+
+				return true;
+			} else {
+				executor.shutdown();
+				throw new ResourceUnavailableException();
+			}
+		} catch (InterruptedException e) {
+			throw new RuntimeException(e);
+		}
+	}
+
+	/**
+	 * Interacts with the servers to read shares and decode a secret
+	 * 
+	 * @param publicKeys
 	 * 
 	 * @param inputPoint
 	 * @return
@@ -497,7 +483,7 @@ public class RsaCertificateAuthorityClient {
 	 * @throws BadArgumentException
 	 * @throws BelowThresholdException
 	 */
-	private BigInteger signMessage(final BigInteger toBeSigned)
+	private BigInteger readShares(final List<EcPoint> publicKeys)
 			throws ResourceUnavailableException, BadArgumentException, BelowThresholdException {
 
 		// Server configuration
@@ -515,7 +501,7 @@ public class RsaCertificateAuthorityClient {
 		// Each task deposits its result into this map after verifying it is correct and
 		// consistent
 		// TODO: Add verification via proofs
-		final List<Object> signatureResponses = Collections.synchronizedList(new ArrayList<>());
+		final List<Object> shareResponses = Collections.synchronizedList(new ArrayList<>());
 		final List<Object> publicConfigurations = Collections.synchronizedList(new ArrayList<>());
 
 		// Create a partial result task for everyone except ourselves
@@ -524,18 +510,16 @@ public class RsaCertificateAuthorityClient {
 			serverId++;
 			final String serverIp = serverAddress.getAddress().getHostAddress();
 			final int serverPort = HttpRequestProcessor.BASE_HTTP_PORT + serverId;
-			final String linkUrl = "https://" + serverIp + ":" + serverPort + "/sign?secretName=" + this.secretName
-					+ "&message=" + toBeSigned.toString();
+			final String linkUrl = "https://" + serverIp + ":" + serverPort + "/read?secretName=" + this.secretName
+					+ "&json=true";
 
 			final int thisServerId = serverId;
 
 			// Create new task to get the partial exponentiation result from the server
-			executor.submit(new PartialResultTask(serverId, linkUrl, signatureResponses, latch, failureCounter,
+			executor.submit(new PartialResultTask(serverId, linkUrl, shareResponses, latch, failureCounter,
 					maximumFailures) {
 				@Override
 				void parseJsonResult(final String json) throws Exception {
-
-					// FIXME: Do majority voting of correct parameters
 
 					// Parse JSON
 					final JSONParser parser = new JSONParser();
@@ -543,43 +527,37 @@ public class RsaCertificateAuthorityClient {
 					final JSONObject jsonObject = (JSONObject) obj;
 					final Long responder = (Long) jsonObject.get("responder");
 					final long epoch = (Long) jsonObject.get("epoch");
-					final BigInteger signatureShare = new BigInteger((String) jsonObject.get("share"));
+					if (jsonObject.get("share") != null) {
+						final BigInteger share = new BigInteger((String) jsonObject.get("share"));
 
-					final JSONArray proof = (JSONArray) jsonObject.get("share_proof");
-					final BigInteger c = new BigInteger((String) proof.get(0));
-					final BigInteger z = new BigInteger((String) proof.get(1));
+						// Verify result
+						if ((responder == thisServerId)) {
 
-					final BigInteger e = new BigInteger((String) jsonObject.get("e"));
-					final BigInteger n = new BigInteger((String) jsonObject.get("n"));
-					final BigInteger v = new BigInteger((String) jsonObject.get("v"));
+							// Check consistency of share against known public key
+							final EcPoint computedPublicKey = CommonConfiguration.CURVE.multiply(CommonConfiguration.g,
+									share);
+							if (!computedPublicKey.equals(publicKeys.get(thisServerId))) {
+								throw new Exception("Server " + thisServerId
+										+ " sent a share inconsistent with its known public key");
+							}
 
-					final BigInteger[] sharePublicKeys = new BigInteger[numShareholders];
-					final JSONArray vertificationKeys = (JSONArray) jsonObject.get("verification_keys");
-					for (int i = 0; i < numShareholders; i++) {
-						sharePublicKeys[i] = new BigInteger((String) vertificationKeys.get(i));
-					}
+							// Create a shamir share object and add it to the list of responses
+							final ShamirShare shamirShare = new ShamirShare(BigInteger.valueOf(thisServerId), share);
 
-					// Verify result
-					// TOOD: Implement retry if epoch mismatch and below threshold
-					if ((responder == thisServerId)) {
+							// Store result for later processing
+							shareResponses.add(shamirShare);
 
-						// Add both to lists, one is private, one is public and should be agreed upon
-						final SignatureResponse signatureResponse = new SignatureResponse(
-								BigInteger.valueOf(thisServerId), signatureShare, new SignatureShareProof(c, z));
-						final ServerPublicConfiguration publicConfiguration = new ServerPublicConfiguration(
-								numShareholders, reconstructionThreshold, n, e, v, sharePublicKeys);
+							// Everything checked out, increment successes
+							latch.countDown();
+						} else {
+							throw new Exception("Server " + thisServerId
+									+ " sent inconsistent results (likely during epoch change)");
+						}
 
-						// Store result for later processing
-						signatureResponses.add(signatureResponse);
-						publicConfigurations.add(publicConfiguration);
-
-						// Everything checked out, increment successes
-						latch.countDown();
 					} else {
-						throw new Exception(
-								"Server " + thisServerId + " sent inconsistent results (likely during epoch change)");
+						// Share was deleted, treat this as a failure
+						throw new Exception("Server " + thisServerId + " is missing a share");
 					}
-
 				}
 			});
 		}
@@ -588,23 +566,18 @@ public class RsaCertificateAuthorityClient {
 			// Once we have K successful responses we can interpolate our share
 			latch.await();
 
-			// Get consistent view of public sharings
-			final ServerPublicConfiguration publicConfiguration = (ServerPublicConfiguration) getConsistentConfiguration(
-					publicConfigurations, reconstructionThreshold);
-
 			// Check that we have enough results to interpolate the share
 			if (failureCounter.get() <= maximumFailures) {
 
-				final List<SignatureResponse> results = signatureResponses.stream()
-						.map(obj -> createSignatureResult(obj)).collect(Collectors.toList());
+				final List<ShamirShare> results = shareResponses.stream()
+						.map(obj -> createShamirShare(obj)).collect(Collectors.toList());
 
 				// When complete, interpolate the result at zero (where the secret lies)
-				final BigInteger signature = ThresholdSignatures.recoverSignature(toBeSigned, results,
-						publicConfiguration);
+				final BigInteger secret = Polynomials.interpolateComplete(results, reconstructionThreshold, 0);
 
 				executor.shutdown();
 
-				return signature;
+				return secret;
 			} else {
 				executor.shutdown();
 				throw new ResourceUnavailableException();
@@ -624,7 +597,7 @@ public class RsaCertificateAuthorityClient {
 	 * @throws BelowThresholdException
 	 */
 	@SuppressWarnings("unchecked")
-	private SimpleEntry<EcPoint, Long> getServerPublicKey(final String secretName)
+	private SimpleEntry<List<EcPoint>, Long> getServerVerificationKeys(final String secretName)
 			throws ResourceUnavailableException, BelowThresholdException {
 
 		// Server configuration
@@ -667,17 +640,25 @@ public class RsaCertificateAuthorityClient {
 							final JSONObject jsonObject = (JSONObject) obj;
 							final Long responder = (Long) jsonObject.get("responder");
 							final long epoch = (Long) jsonObject.get("epoch");
-							final JSONArray resultPoint = (JSONArray) jsonObject.get("public_key");
-							final BigInteger x = new BigInteger((String) resultPoint.get(0));
-							final BigInteger y = new BigInteger((String) resultPoint.get(1));
+							final List<EcPoint> verificationKeys = new ArrayList<>();
+
+							final JSONArray publicKeyPoint = (JSONArray) jsonObject.get("public_key");
+							final BigInteger x = new BigInteger((String) publicKeyPoint.get(0));
+							final BigInteger y = new BigInteger((String) publicKeyPoint.get(1));
+							verificationKeys.add(new EcPoint(x, y));
+							for (int i = 1; i <= numShareholders; i++) {
+								final JSONArray verificationKey = (JSONArray) jsonObject
+										.get("share_verification_key_" + i);
+								final BigInteger x2 = new BigInteger((String) verificationKey.get(0));
+								final BigInteger y2 = new BigInteger((String) verificationKey.get(1));
+								verificationKeys.add(new EcPoint(x2, y2));
+							}
 
 							// Store parsed result
 							if ((responder == thisServerId)) {
 
-								final EcPoint publicKey = new EcPoint(x, y);
-
 								// Store result for later processing
-								collectedResults.add(new SimpleEntry<EcPoint, Long>(publicKey, epoch));
+								collectedResults.add(new SimpleEntry<List<EcPoint>, Long>(verificationKeys, epoch));
 
 								// Everything checked out, increment successes
 								latch.countDown();
@@ -690,7 +671,11 @@ public class RsaCertificateAuthorityClient {
 		}
 
 		try {
-			// Once we have K successful responses we can interpolate our share
+			// Once we have K successful responses we attempt to find a consistent
+			// configuration
+			// FIXME: There is a better way of doing this, map result to a counter, wait for
+			// counter to reach majority (or fail)
+			// if not enough remaining responses permit getting a majority
 			latch.await();
 
 			// Check that we have enough results to interpolate the share
@@ -698,7 +683,7 @@ public class RsaCertificateAuthorityClient {
 
 				executor.shutdown();
 
-				return (SimpleEntry<EcPoint, Long>) getConsistentConfiguration(collectedResults,
+				return (SimpleEntry<List<EcPoint>, Long>) getConsistentConfiguration(collectedResults,
 						reconstructionThreshold);
 			} else {
 				executor.shutdown();
@@ -719,7 +704,7 @@ public class RsaCertificateAuthorityClient {
 				voteTracker.put(object, 1);
 			} else {
 				Integer currentCount = voteTracker.get(object);
-				voteTracker.put(object, new Integer(currentCount + 1));
+				voteTracker.put(object, Integer.valueOf(currentCount + 1));
 			}
 		}
 
@@ -796,8 +781,7 @@ public class RsaCertificateAuthorityClient {
 					final PublicKey peerPublicKey = peerCertificate.getPublicKey();
 
 					// Attempt to link the public key in the certificate to a known entity's key
-					final Integer serverId = RsaCertificateAuthorityClient.this.serverKeys
-							.getEntityIndex(peerPublicKey);
+					final Integer serverId = ReadWriteClient.this.serverKeys.getEntityIndex(peerPublicKey);
 					if (serverId != remoteServerId) {
 						System.err.println("Invalid server!!!: was " + serverId + ", expected: " + remoteServerId);
 						throw new CertificateException("Invalid peer certificate");
@@ -861,141 +845,6 @@ public class RsaCertificateAuthorityClient {
 
 		// Get the socket factory from the context
 		httpsConnection.setSSLSocketFactory(sslContext.getSocketFactory());
-	}
-
-	/*** Static Methods ***/
-
-	private static X509CertInfo createCertificateInfo(final String subjectDn, final String altNameIp,
-			final String altNameHost, final PublicKey subjectPublicKey, final long validForDays, final boolean makeCa,
-			final String issuerDn) {
-
-		try {
-
-			// Look up algorithm based on CA private key
-			final AlgorithmId algorithmId = AlgorithmId.get(CERTIFICATE_SIGNING_ALGORITHM);
-
-			// Define validity period
-			final Date notBefore = new Date(new Date().getTime() - 300); // 5 minutes prior to avoid clock skew issues
-			final Date notAfter = new Date(notBefore.getTime() + (validForDays * 24 * 3600 * 1000));
-			final CertificateValidity validity = new CertificateValidity(notBefore, notAfter);
-
-			// Random serial number
-			final BigInteger serialNumber = RandomNumberGenerator.generateRandomInteger(128);
-
-			// Define information within certificate
-			final X509CertInfo certificateInfo = new X509CertInfo();
-			certificateInfo.set(X509CertInfo.VERSION, new CertificateVersion(CertificateVersion.V3));
-			certificateInfo.set(X509CertInfo.VALIDITY, validity);
-			certificateInfo.set(X509CertInfo.SERIAL_NUMBER, new CertificateSerialNumber(serialNumber));
-			certificateInfo.set(X509CertInfo.SUBJECT, new X500Name(subjectDn));
-			certificateInfo.set(X509CertInfo.ISSUER, new X500Name(issuerDn));
-			certificateInfo.set(X509CertInfo.KEY, new CertificateX509Key(subjectPublicKey));
-			certificateInfo.set(X509CertInfo.ALGORITHM_ID, new CertificateAlgorithmId(algorithmId));
-
-			// Process extensions
-			final CertificateExtensions extensions = new CertificateExtensions();
-
-			// Make the issued certificate a sub-CA of this one (or self-signed)
-			final BasicConstraintsExtension bce = new BasicConstraintsExtension(makeCa, 0);
-			extensions.set(BasicConstraintsExtension.NAME,
-					new BasicConstraintsExtension(true, bce.getExtensionValue()));
-
-			// Add a subject alternative name (if not null)
-			if (altNameIp != null) {
-				final GeneralNames generalNames = new GeneralNames();
-				generalNames.add(new GeneralName(new IPAddressName(altNameIp)));
-				generalNames.add(new GeneralName(new DNSName(altNameHost)));
-				final SubjectAlternativeNameExtension san = new SubjectAlternativeNameExtension(false, generalNames);
-				extensions.set(SubjectAlternativeNameExtension.NAME, san);
-			}
-
-			certificateInfo.set(X509CertInfo.EXTENSIONS, extensions);
-
-			return certificateInfo;
-
-		} catch (GeneralSecurityException | IOException e) {
-			throw new RuntimeException(e);
-		}
-	}
-
-	private static final X509Certificate createCertificateFromTbsAndSignature(X509CertInfo info, final byte[] signature)
-			throws CertificateException, NoSuchAlgorithmException, InvalidKeyException, NoSuchProviderException,
-			SignatureException {
-
-		try (DerOutputStream out = new DerOutputStream(); DerOutputStream tmp = new DerOutputStream();) {
-
-			// Append the certificate information
-			info.encode(tmp);
-
-			// Append the signature algorithm
-			final AlgorithmId algId = AlgorithmId.get(CERTIFICATE_SIGNING_ALGORITHM);
-			algId.encode(tmp);
-
-			// Append the signature
-			tmp.putBitString(signature);
-
-			// Wrap the signed data in a SEQUENCE { data, algorithm, sig }
-			out.write(DerValue.tag_Sequence, tmp);
-			byte[] signedCert = out.toByteArray();
-
-			// Create a certificate
-			return new X509CertImpl(signedCert);
-
-		} catch (IOException e) {
-			throw new CertificateEncodingException(e.toString());
-		}
-	}
-
-	private static BigInteger EMSA_PKCS1_V1_5_ENCODE(byte[] input, final BigInteger modulus)
-			throws NoSuchAlgorithmException, IOException {
-
-		// Digest the input
-		final MessageDigest md = MessageDigest.getInstance(HASH_ALGORITHM);
-		final byte[] digest = md.digest(input);
-
-		// Create a digest info consisting of the algorithm id and the hash
-		final AlgorithmIdentifier algId = new AlgorithmIdentifier(NISTObjectIdentifiers.id_sha512, DERNull.INSTANCE);
-		final DigestInfo digestInfo = new DigestInfo(algId, digest);
-		final byte[] message = digestInfo.getEncoded(ASN1Encoding.DER);
-
-		// Do PKCS1 padding
-		final byte[] block = new byte[((modulus.bitLength() + 7) / 8) - 1];
-		System.arraycopy(message, 0, block, block.length - message.length, message.length);
-		block[0] = 0x01; // type code 1
-		for (int i = 1; i != block.length - message.length - 1; i++) {
-			block[i] = (byte) 0xFF;
-		}
-
-		return new BigInteger(1, block);
-	}
-
-	public static void exampleRawSignatureGeneration() throws NoSuchAlgorithmException, InvalidKeyException,
-			SignatureException, IOException, CertificateException, NoSuchProviderException {
-
-		// Key generation
-		KeyPairGenerator generator = KeyPairGenerator.getInstance("RSA");
-		generator.initialize(1024);
-		KeyPair rsaKeyPair = generator.generateKeyPair();
-		RSAPrivateKey rsaPrivateKey = (RSAPrivateKey) rsaKeyPair.getPrivate();
-		RSAPublicKey rsaPublicKey = (RSAPublicKey) rsaKeyPair.getPublic();
-
-		// Generate certificate without a signature
-		final X509CertInfo certInfo = createCertificateInfo("CN=test", null, null, rsaKeyPair.getPublic(), 365, true,
-				"CN=test");
-		final X509CertImpl certificate = new X509CertImpl(certInfo);
-		final byte[] toBeSigned = certificate.getTBSCertificate();
-
-		// Manually sign it
-		final BigInteger toBeSignedRaw = EMSA_PKCS1_V1_5_ENCODE(toBeSigned, rsaPublicKey.getModulus());
-		final byte[] signature = Exponentiation
-				.modPow(toBeSignedRaw, rsaPrivateKey.getPrivateExponent(), rsaPrivateKey.getModulus()).toByteArray();
-
-		// Create the certificate passing in the signature
-		final X509Certificate cert = createCertificateFromTbsAndSignature(certInfo, signature);
-
-		System.out.println(cert);
-		cert.verify(rsaKeyPair.getPublic());
-		System.out.println("Certificate is valid!");
 	}
 
 }
